@@ -1,5 +1,11 @@
 2005-10-13  Vincent Noel <vnoel@cox.net>
 
+	* log_repaint.c: (handle_selection_changed_cb): When selecting
+	lines, don't go through all the log to find matches, it's way too
+	slow. Be smarter. Fix bug #318609.
+
+2005-10-13  Vincent Noel <vnoel@cox.net>
+
 	* logrtns.c: (CloseLog):
 	* logview.c: (loglist_selection_changed), (CreateMainWin),
 	(logview_calendar_set_state): Don't hide the calendar when the log
